[project]
name = "hesapla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "latex2sympy2>=1.9.1",
    "pix2text[multilingual]>=1.1.3.2",
    "streamlit>=1.46.1",
    "streamlit-drawable-canvas>=0.9.3",
    "streamlit-drawable-canvas-jsretry>=0.9.3",
    "sympy>=1.14.0",
    "watchdog>=6.0.0",
]
